# mentis-log

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_HANDOFF.md  USAGE.md  interpretation.py  mentis_log_cli.py  plot.py  pyproject.toml  refine.py  runtime.py
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/adapters/: __init__.py  bgl.py  evaluation.py  hdfs.py
benchmarks/datasets/public/bgl/: README.md
benchmarks/datasets/public/hdfs/: README.md
benchmarks/real/: README.md
benchmarks/results/: bgl_smoke_default_vs_heuristic.json  bgl_smoke_default_vs_heuristic.md  hdfs_smoke_default_vs_heuristic.json  hdfs_smoke_default_vs_heuristic.md  summary.md  synthetic_default_vs_heuristic.json  synthetic_default_vs_heuristic.md
benchmarks/synthetic/: incident_medium.json  incident_noisy.json  incident_small.json
primitives/: __init__.py  lexical.py  linemode.py  peaks.py  policy.py  qalign.py  segment.py  similarity.py
tests/: test_edge_cleanup.py  test_interpretation.py  test_linemode.py  test_plot_modes.py  test_primitives.py  test_public_benchmark.py  test_qalign.py  test_qalign_sparse.py  test_qalign_tokens.py  test_refine.py  test_refine_onset.py  test_release.py
tools/: gen_benchmark_fixtures.py  gen_large_log.py  gen_public_smoke_fixtures.py
